[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day-one"
path = "src/one.rs"

[[bin]]
name = "day-one-part-two"
path = "src/one-pt2.rs"

[[bin]]
name = "day-two"
path = "src/two.rs"

[[bin]]
name = "day-two-part-two"
path = "src/two-pt2.rs"

[dependencies]
